--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
-    <style type="text/css">
-        body {
-            padding: 0px;
-            margin: 0px;
-            overflow: hidden;
-            background: linear-gradient(#e4e0ba, #f7d9aa);
-        }
-    </style>
+    <link rel="stylesheet" type="text/css" href="./assets/style.css">
     <meta charset="UTF-8" />
     <meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, width=device-width, height=device-height, user-scalable=0">
     <meta name="apple-mobile-web-app-capable" content="yes">
@@ -18,5 +11,19 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
 </head>
 <body>
+    <div id="container">
+        <div id="game"></div>
+        <div id="score">0</div>
+        <div id="instructions">Click (or press the spacebar) to place the block</div>
+        <div class="game-over">
+            <h2>Game Over</h2>
+            <p>You did great, you're the best.</p>
+            <p>Click or spacebar to start again</p>
+        </div>
+        <div class="game-ready">
+            <div id="start-button">Start</div>
+            <div></div>
+        </div>
+    </div>
 </body>
 </html>
