--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,7 @@
     <div id="container">
         <div id="game"></div>
         <div id="score">0</div>
+        <div id="version">v0.0.0</div>
         <div id="instructions">Click (or press the spacebar) to place the block</div>
         <div class="game-over">
             <h2>Game Over</h2>
