migrated to vite

--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!doctype html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" type="text/css" href="./assets/style.css">
+    <link rel="stylesheet" type="text/css" href="/style.css">
     <meta charset="UTF-8" />
     <meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, width=device-width, height=device-height, user-scalable=0">
-    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="mobile-web-app-capable" content="yes">
     <meta name="full-screen" content="yes">
     <meta name="x5-fullscreen" content="true">
     <meta name="360-fullscreen" content="true">
@@ -26,5 +26,6 @@
             <div></div>
         </div>
     </div>
+    <script type="module" src="/src/main.ts"></script>
 </body>
 </html>
