--- a/index.html
+++ b/index.html
@@ -1,31 +1,78 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-<head>
-    <link rel="stylesheet" type="text/css" href="/style.css">
+  <head>
+    <link rel="stylesheet" type="text/css" href="/style.css" />
     <meta charset="UTF-8" />
-    <meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, width=device-width, height=device-height, user-scalable=0">
-    <meta name="mobile-web-app-capable" content="yes">
-    <meta name="full-screen" content="yes">
-    <meta name="x5-fullscreen" content="true">
-    <meta name="360-fullscreen" content="true">
-    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
-</head>
-<body>
+    <meta
+      name="viewport"
+      content="initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, width=device-width, height=device-height, user-scalable=0"
+    />
+    <meta name="mobile-web-app-capable" content="yes" />
+    <meta name="full-screen" content="yes" />
+    <meta name="x5-fullscreen" content="true" />
+    <meta name="360-fullscreen" content="true" />
+    <meta
+      name="apple-mobile-web-app-status-bar-style"
+      content="black-translucent"
+    />
+  </head>
+  <body>
     <div id="container">
-        <div id="game"></div>
-        <div id="score">0</div>
-        <div id="version">v0.0.0</div>
-        <div id="instructions">Click (or press the spacebar) to place the block</div>
-        <div class="game-over">
-            <h2>Game Over</h2>
-            <p>You did great, you're the best.</p>
-            <p>Click or spacebar to start again</p>
-        </div>
-        <div class="game-ready">
-            <div id="start-button">Start</div>
-            <div></div>
-        </div>
+      <div id="game"></div>
+      <div id="score">0</div>
+      <div id="version">v0.0.0</div>
+      <div id="instructions">
+        Click (or press the spacebar) to place the block
+      </div>
     </div>
+
+    <!-- Modal for player name input, start button, and game over -->
+    <div id="game-modal" class="modal">
+      <div class="modal-content">
+        <!-- Player name input section -->
+        <div id="name-input-section" class="modal-section">
+          <h2>Enter Your Name</h2>
+          <input
+            type="text"
+            id="player-name"
+            placeholder="Your name"
+            maxlength="20"
+          />
+          <button id="name-submit-btn">Continue</button>
+        </div>
+
+        <!-- Start game section -->
+        <div id="start-game-section" class="modal-section hidden">
+          <h2>Welcome, <span id="player-display-name"></span>!</h2>
+          <button id="start-button">Start Game</button>
+
+          <!-- Previous scores section -->
+          <div id="previous-scores">
+            <h3>Previous Scores</h3>
+            <div id="scores-list">
+              <p class="no-scores">No previous scores yet</p>
+            </div>
+          </div>
+        </div>
+
+        <!-- Game over section -->
+        <div id="game-over-section" class="modal-section hidden">
+          <h2>Game Over</h2>
+          <p>You did great, you're the best!</p>
+          <p>Score: <span id="final-score">0</span></p>
+          <button id="play-again-btn">Play Again</button>
+
+          <!-- Previous scores section -->
+          <div id="previous-scores-game-over">
+            <h3>Previous Scores</h3>
+            <div id="scores-list-game-over">
+              <p class="no-scores">No previous scores yet</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <script type="module" src="/src/main.ts"></script>
-</body>
+  </body>
 </html>
