sound and leaderboard

--- a/index.html
+++ b/index.html
@@ -24,6 +24,25 @@
       <div id="instructions">
         Click (or press the spacebar) to place the block
       </div>
+
+      <!-- Audio Controls -->
+      <div class="audio-controls">
+        <button
+          id="audio-toggle"
+          class="audio-btn"
+          title="Toggle Sound & Music"
+        >
+          🔊
+        </button>
+      </div>
+
+      <!-- Difficulty Indicator -->
+      <div
+        id="difficulty-indicator"
+        class="difficulty-indicator difficulty-easy"
+      >
+        Easy
+      </div>
     </div>
 
     <!-- Modal for player name input, start button, and game over -->
